<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fatique1"
        android:textColor="#DDDC3030"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/triangle"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/note"
            android:textColor="#000000">
        </TextView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Тест"
        android:textColor="#DDDC3030"
        android:textSize="18sp"
        android:layout_marginTop="15dp">
    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="15sp">
        </TextView>

        <EditText
            android:id="@+id/enter1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:drawable/editbox_background">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Пол:"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="15sp">
        </TextView>

        <EditText
            android:id="@+id/enter2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:drawable/editbox_background">
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:textSize="14sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item2"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:textSize="14sp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item3"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:textSize="14sp">
        </TextView>
        <EditText
            android:id="@+id/ent1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:drawable/editbox_background">
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item4"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:textSize="14sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item5"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:textSize="14sp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item6"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:textSize="14sp">
        </TextView>
        <EditText
            android:id="@+id/ent2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:drawable/editbox_background">
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item7"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:textSize="14sp">
    </TextView>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/watch"
        android:layout_marginTop="20dp">
    </ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#414E4E4E"
        android:text="Ввод"
        android:id="@+id/btnOK"
        android:onClick="Click">
    </Button>
</LinearLayout>