<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="13dp">
    <TextView
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="#DDDC3030"
        android:textSize="25sp">
    </TextView>

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/reminder"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="#000000">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/redsmile">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textSize="18dp">
        </TextView>
    </LinearLayout>

    <ImageView
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:src="@drawable/high"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp">
    </ImageView>
</LinearLayout>